pipeline fully woking

--- a/config_user/config_run.yaml
+++ b/config_user/config_run.yaml
@@ -1,4 +1,9 @@
 project: 2_project
 samples:
 - ERR10039715
+- ERR10039716
 - ERR10039718
+- ERR10039719
+- ERR10039720
+- ERR10039723
+- ERR10109718
