--- a/config/environment.yaml
+++ b/config/environment.yaml
@@ -3,4 +3,4 @@ channels:
   - conda-forge
 dependencies:
   - snakemake-minimal >=5.24.1
-  - python yaml #check_user_input
+  - python yaml biopython =1.79 #check_user_input
