--- a/config/insaflu.yaml
+++ b/config/insaflu.yaml
@@ -3,4 +3,7 @@ channels:
   - conda-forge
 dependencies:
   - snakemake-minimal >=5.24.1
-  - python yaml biopython =1.79 #check_user_input
+  - python =3.10
+  - biopython =1.79
+  - pyyaml =6.0
+  - pandas =1.4.3
