working with mafft and fastree proteins

--- a/config_user/config_run.yaml
+++ b/config_user/config_run.yaml
@@ -1,11 +1,16 @@
-project: insaflu_comp_1
-proteins: []
+project: insaflu_2
+proteins:
+- orf1ab
+- S
+- ORF3a
+- E
+- M
+- ORF6
+- ORF7a
+- ORF8
+- N
+- ORF10
 ref: SARS_CoV_2
 samples:
-- ERR10039715
-- ERR10039716
 - ERR10039718
-- ERR10039719
-- ERR10039720
 - ERR10039723
-- ERR10109718
