--- a/config_user/config_user.yaml
+++ b/config_user/config_user.yaml
@@ -1,5 +1,5 @@
 only_samples: True
-project_name: insaflu
+project_name: insaflu_new_translate
 species: SARS_CoV_2 #MonkeyPox #Flu
 fasta_reference: 'reference/'
 gb_reference: 'reference/'
