--- a/config_user/config_user.yaml
+++ b/config_user/config_user.yaml
@@ -1,5 +1,5 @@
-only_samples: True
-project_name: insaflu_new_translate
-species: SARS_CoV_2 #MonkeyPox #Flu
-fasta_reference: 'reference/'
-gb_reference: 'reference/'
+only_samples: False
+project_name: first_flu
+locus: Flu #SARS_CoV_2 #MonkeyPox #Flu  <= Case Sensitive
+fasta_reference: reference/A_H1N1pdm09_A_Michigan_45_2015.fasta
+gb_reference: reference/A_H1N1pdm09_A_Michigan_45_2015.gbk
