--- a/config/config_run.yaml
+++ b/config/config_run.yaml
@@ -1,14 +1,16 @@
-locus: Flu
+locus: SARS_CoV_2
 project: first_flu
 proteins:
-- PB2
-- PB1
-- PA
-- HA
-- NP
-- NA
+- orf1ab
+- S
+- ORF3a
+- E
 - M
-- NS
+- ORF6
+- ORF7a
+- ORF8
+- N
+- ORF10
 samples:
-- SRR10885407
-- SRR10885406
+- ERR10039718
+- ERR10039723
