--- a/config_user/config_user.yaml
+++ b/config_user/config_user.yaml
@@ -1,5 +1,5 @@
 only_samples: False
-project_name: first_flu
+project_name: covid
 locus: SARS_CoV_2 #MonkeyPox #Flu  <= Case Sensitive
-fasta_reference: reference/SARS_CoV_2_Wuhan_Hu_1_MN908947.fasta #reference/A_H1N1pdm09_A_Michigan_45_2015.fasta
-gb_reference: reference/SARS_CoV_2_Wuhan_Hu_1_MN908947.gb #reference/A_H1N1pdm09_A_Michigan_45_2015.gbk
+fasta_reference: reference/SARS_CoV_2_Wuhan_Hu_1_MN908947.fasta #reference/A_H1N1pdm09_A_Michigan_45_2015.fasta  
+gb_reference: reference/SARS_CoV_2_Wuhan_Hu_1_MN908947.gb  #reference/A_H1N1pdm09_A_Michigan_45_2015.gbk 
