--- a/config_user/config_user1.yaml
+++ b/config_user/config_user1.yaml
@@ -1,5 +1,5 @@
 only_samples: False
-project_name: covid_testing
+project_name: covid_testing_2
 locus: SARS_CoV_2 #MonkeyPox #Flu  <= Case Sensitive
 fasta_reference: reference/SARS_CoV_2_Wuhan_Hu_1_MN908947.fasta #reference/A_H1N1pdm09_A_Michigan_45_2015.fasta  #reference/SARS_CoV_2_Wuhan_Hu_1_MN908947.fasta 
 gb_reference: reference/SARS_CoV_2_Wuhan_Hu_1_MN908947.gb #reference/A_H1N1pdm09_A_Michigan_45_2015.gbk #reference/SARS_CoV_2_Wuhan_Hu_1_MN908947.gb  # 
