validated variant script and adjustments

--- a/config/snpeff.config
+++ b/config/snpeff.config
@@ -33,3 +33,10 @@ A_H3N2_A_Hong_Kong_4801_2014.NP.codonTable : Bacterial_and_Plant_Plastid
 A_H3N2_A_Hong_Kong_4801_2014.NA.codonTable : Bacterial_and_Plant_Plastid
 A_H3N2_A_Hong_Kong_4801_2014.MP.codonTable : Bacterial_and_Plant_Plastid
 A_H3N2_A_Hong_Kong_4801_2014.NS.codonTable : Bacterial_and_Plant_Plastid
+
+
+# Severe acute respiratory syndrome coronavirus 2
+Severe_acute_respiratory_syndrome_coronavirus_2.genome : Severe acute respiratory syndrome coronavirus 2
+        Severe_acute_respiratory_syndrome_coronavirus_2 : MN908947.3
+        Severe_acute_respiratory_syndrome_coronavirus_2.MN908947.3.codonTable : Bacterial_and_Plant_Plastid
+
