fix for different genomes

--- a/config/snpeff.config
+++ b/config/snpeff.config
@@ -23,16 +23,17 @@ codon.Chlorophycean_Mitochondrial			: TTT/F, TTC/F, TTA/L, TTG/L, TCT/S, TCC/S, 
 codon.Trematode_Mitochondrial				: TTT/F, TTC/F, TTA/L, TTG/L, TCT/S, TCC/S, TCA/S, TCG/S, TAT/Y, TAC/Y, TAA/*, TAG/*, TGT/C, TGC/C, TGA/W, TGG/W, CTT/L, CTC/L, CTA/L, CTG/L, CCT/P, CCC/P, CCA/P, CCG/P, CAT/H, CAC/H, CAA/Q, CAG/Q, CGT/R, CGC/R, CGA/R, CGG/R, ATT/I, ATC/I, ATA/M, ATG/M+, ACT/T, ACC/T, ACA/T, ACG/T, AAT/N, AAC/N, AAA/N, AAG/K, AGT/S, AGC/S, AGA/S, AGG/S, GTT/V, GTC/V, GTA/V, GTG/V+, GCT/A, GCC/A, GCA/A, GCG/A, GAT/D, GAC/D, GAA/E, GAG/E, GGT/G, GGC/G, GGA/G, GGG/G
 codon.Scenedesmus_obliquus_Mitochondrial	: TTT/F, TTC/F, TTA/L, TTG/L, TCT/S, TCC/S, TCA/*, TCG/S, TAT/Y, TAC/Y, TAA/*, TAG/L, TGT/C, TGC/C, TGA/*, TGG/W, CTT/L, CTC/L, CTA/L, CTG/L, CCT/P, CCC/P, CCA/P, CCG/P, CAT/H, CAC/H, CAA/Q, CAG/Q, CGT/R, CGC/R, CGA/R, CGG/R, ATT/I, ATC/I, ATA/I, ATG/M+, ACT/T, ACC/T, ACA/T, ACG/T, AAT/N, AAC/N, AAA/K, AAG/K, AGT/S, AGC/S, AGA/R, AGG/R, GTT/V, GTC/V, GTA/V, GTG/V, GCT/A, GCC/A, GCA/A, GCG/A, GAT/D, GAC/D, GAA/E, GAG/E, GGT/G, GGC/G, GGA/G, GGG/G
 codon.Thraustochytrium_Mitochondrial		: TTT/F, TTC/F, TTA/*, TTG/L, TCT/S, TCC/S, TCA/S, TCG/S, TAT/Y, TAC/Y, TAA/*, TAG/*, TGT/C, TGC/C, TGA/*, TGG/W, CTT/L, CTC/L, CTA/L, CTG/L, CCT/P, CCC/P, CCA/P, CCG/P, CAT/H, CAC/H, CAA/Q, CAG/Q, CGT/R, CGC/R, CGA/R, CGG/R, ATT/I+, ATC/I, ATA/I, ATG/M+, ACT/T, ACC/T, ACA/T, ACG/T, AAT/N, AAC/N, AAA/K, AAG/K, AGT/S, AGC/S, AGA/R, AGG/R, GTT/V, GTC/V, GTA/V, GTG/V+, GCT/A, GCC/A, GCA/A, GCG/A, GAT/D, GAC/D, GAA/E, GAG/E, GGT/G, GGC/G, GGA/G, GGG/G
-A_H3N2_A_Hong_Kong_4801_2014.genome : insaflu reference
-A_H3N2_A_Hong_Kong_4801_2014.chromosome : PB2, PB1, PA, HA, NP, NA, MP, NS
-A_H3N2_A_Hong_Kong_4801_2014.PB2.codonTable : Bacterial_and_Plant_Plastid
-A_H3N2_A_Hong_Kong_4801_2014.PB1.codonTable : Bacterial_and_Plant_Plastid
-A_H3N2_A_Hong_Kong_4801_2014.PA.codonTable : Bacterial_and_Plant_Plastid
-A_H3N2_A_Hong_Kong_4801_2014.HA.codonTable : Bacterial_and_Plant_Plastid
-A_H3N2_A_Hong_Kong_4801_2014.NP.codonTable : Bacterial_and_Plant_Plastid
-A_H3N2_A_Hong_Kong_4801_2014.NA.codonTable : Bacterial_and_Plant_Plastid
-A_H3N2_A_Hong_Kong_4801_2014.MP.codonTable : Bacterial_and_Plant_Plastid
-A_H3N2_A_Hong_Kong_4801_2014.NS.codonTable : Bacterial_and_Plant_Plastid
+B_Vic_B_Brisbane_60_2008.genome : flu
+B_Vic_B_Brisbane_60_2008.reference: 
+B_Vic_B_Brisbane_60_2008.chromosome : 1, 2, 3, 4, 5, 6, 7, 8
+B_Vic_B_Brisbane_60_2008.1.codonTable : Bacterial_and_Plant_Plastid
+B_Vic_B_Brisbane_60_2008.2.codonTable : Bacterial_and_Plant_Plastid
+B_Vic_B_Brisbane_60_2008.3.codonTable : Bacterial_and_Plant_Plastid
+B_Vic_B_Brisbane_60_2008.4.codonTable : Bacterial_and_Plant_Plastid
+B_Vic_B_Brisbane_60_2008.5.codonTable : Bacterial_and_Plant_Plastid
+B_Vic_B_Brisbane_60_2008.6.codonTable : Bacterial_and_Plant_Plastid
+B_Vic_B_Brisbane_60_2008.7.codonTable : Bacterial_and_Plant_Plastid
+B_Vic_B_Brisbane_60_2008.8.codonTable : Bacterial_and_Plant_Plastid
 
 
 # Severe acute respiratory syndrome coronavirus 2
