--- a/config/config_run.yaml
+++ b/config/config_run.yaml
@@ -1,18 +1,15 @@
-locus: MN908947.3
-project: covid_testing_2
+locus: Flu
+project: flu_testing_BVictoria
 proteins:
-- orf1ab
-- S
-- ORF3a
-- E
-- M
-- ORF6
-- ORF7a
-- ORF8
-- N
-- ORF10
+- PB2
+- PB1
+- PA
+- HA
+- NP
+- NA
+- M_1
+- M_2
+- NS
 samples:
-- ERR10039715
-- ERR10039716
-- ERR10039718
-- ERR10039719
+- SRR10885405
+- SRR10885406
