--- a/config/snpeff.config
+++ b/config/snpeff.config
@@ -34,3 +34,6 @@ B_Vic_B_Brisbane_60_2008.5.codonTable : Bacterial_and_Plant_Plastid
 B_Vic_B_Brisbane_60_2008.6.codonTable : Bacterial_and_Plant_Plastid
 B_Vic_B_Brisbane_60_2008.7.codonTable : Bacterial_and_Plant_Plastid
 B_Vic_B_Brisbane_60_2008.8.codonTable : Bacterial_and_Plant_Plastid
+
+SARS_CoV_2_COVID_19_Wuhan_Hu_1_MN908947.genome: SARS_CoV_2_COVID_19_Wuhan_Hu_1_MN908947
+SARS_CoV_2_COVID_19_Wuhan_Hu_1_MN908947.MN908947.3.codonTable : Bacterial_and_Plant_Plastid
