--- a/config/config_run.yaml
+++ b/config/config_run.yaml
@@ -1,18 +1,22 @@
-identification: MN908947
-locus: SARS_CoV_2
-project: INSAFLU_testing
+identification: ''
+locus: Flu
+project: flu_testing_BVictoria
 proteins:
-- orf1ab
-- S
-- ORF3a
-- E
-- M
-- ORF6
-- ORF7a
-- ORF8
-- N
-- ORF10
+- PB2
+- PB1
+- PA
+- HA
+- NP
+- NA
+- M_1
+- M_2
+- NS
+sample_type:
+  ERR974981: medaka
+  SRR10885405: snippy
+  SRR10885406: snippy
 samples:
-- ERR10039718
-- ERR10039723
-version: 3
+- SRR10885405
+- SRR10885406
+- ERR974981
+version: ''
