--- a/config_user/parameters.yaml
+++ b/config_user/parameters.yaml
@@ -1,15 +1,15 @@
-min_coverage_consensus: 90
+min_coverage_consensus: 70
 
 ##ILLUMINA / Ion Torrent data##
 # Trimmomatic 
-ILLUMINACLIP: null #(default: Not apply)
-HEADCROP: 0 #(default = 0)
-CROP: 0 #(default = 0)
-SLIDINGWINDOW1: 5 #(default = 5)
-SLIDINGWINDOW2: 20 #(default = 20)
-LEADING: 3 #(default = 3)
-TRAILING: 3 #(default = 3)
-MINLEN: 35 #(default = 35)
+trimmo-ILLUMINACLIP: null #(default: Not apply)
+trimmo-HEADCROP: null #(default = 0)
+trimmo-CROP: null #(default = 0)
+trimmo-SLIDINGWINDOW1: 5 #(default = 5)
+trimmo-SLIDINGWINDOW2: 20 #(default = 20)
+trimmo-LEADING: 3 #(default = 3)
+trimmo-TRAILING: 3 #(default = 3)
+trimmo-MINLEN: 35 #(default = 35)
 
 ## Oxford Nanopore Technologies (ONT) data ##
 # NanoFilt 
@@ -17,8 +17,7 @@ QUALITY: 10 #(default: 10)
 LENGTH: 50 #(default: 50)
 HEADCROP: 70 #(default: 70)
 TAILCROP: 70 #(default: 70)
-MAXLENGTH: 0 #(default: 0)
-
+MAXLENGTH: null #(default: 0)
 
 #Mapping, Variant Calling
 ##ILLUMINA / Ion Torrent data##
@@ -27,7 +26,7 @@ MAXLENGTH: 0 #(default: 0)
 
 mapqual: 20 #(default = 20)
 
-mincov: 10 #default = 10)
+mincov: 29 #default = 10)
 
 minfrac: 0.51 #(default = 0.51)
 
@@ -36,7 +35,7 @@ minfrac: 0.51 #(default = 0.51)
 
 Medaka_model: r941_min_high_g360 #(default: r941_min_high_g360) (see: https://nanoporetech.github.io/medaka/)
 
-mincov_medaka: 30 #(default: 30)
+mincov_medaka: 29 #(default: 30)
 
 Min_prop_for_variant_evidence: 0.8 #(default: 0.8).
 
