--- a/config/snpeff.config
+++ b/config/snpeff.config
@@ -47,3 +47,13 @@ B_Vic_B_Brisbane_60_2008.5.codonTable : Bacterial_and_Plant_Plastid
 B_Vic_B_Brisbane_60_2008.6.codonTable : Bacterial_and_Plant_Plastid
 B_Vic_B_Brisbane_60_2008.7.codonTable : Bacterial_and_Plant_Plastid
 B_Vic_B_Brisbane_60_2008.8.codonTable : Bacterial_and_Plant_Plastid
+home/reusebio/tese/insaflu_snakemake/reference/A_H1N1pdm09_A_Michigan_45_2015.chromosome : [ ' 1 ' ,   ' 2 ' ,   ' 3 ' ,   ' 4 ' ,   ' 5 ' ,   ' 6 ' ,   ' 7 ' ,   ' 8 ' ]
+home/reusebio/tese/insaflu_snakemake/reference/A_H1N1pdm09_A_Michigan_45_2015.genome : flu
+home/reusebio/tese/insaflu_snakemake/reference/A_H1N1pdm09_A_Michigan_45_2015.1.codonTable : Bacterial_and_Plant_Plastid
+home/reusebio/tese/insaflu_snakemake/reference/A_H1N1pdm09_A_Michigan_45_2015.2.codonTable : Bacterial_and_Plant_Plastid
+home/reusebio/tese/insaflu_snakemake/reference/A_H1N1pdm09_A_Michigan_45_2015.3.codonTable : Bacterial_and_Plant_Plastid
+home/reusebio/tese/insaflu_snakemake/reference/A_H1N1pdm09_A_Michigan_45_2015.4.codonTable : Bacterial_and_Plant_Plastid
+home/reusebio/tese/insaflu_snakemake/reference/A_H1N1pdm09_A_Michigan_45_2015.5.codonTable : Bacterial_and_Plant_Plastid
+home/reusebio/tese/insaflu_snakemake/reference/A_H1N1pdm09_A_Michigan_45_2015.6.codonTable : Bacterial_and_Plant_Plastid
+home/reusebio/tese/insaflu_snakemake/reference/A_H1N1pdm09_A_Michigan_45_2015.7.codonTable : Bacterial_and_Plant_Plastid
+home/reusebio/tese/insaflu_snakemake/reference/A_H1N1pdm09_A_Michigan_45_2015.8.codonTable : Bacterial_and_Plant_Plastid
