--- a/config/snpeff.config
+++ b/config/snpeff.config
@@ -57,3 +57,13 @@ home/reusebio/tese/insaflu_snakemake/reference/A_H1N1pdm09_A_Michigan_45_2015.5.
 home/reusebio/tese/insaflu_snakemake/reference/A_H1N1pdm09_A_Michigan_45_2015.6.codonTable : Bacterial_and_Plant_Plastid
 home/reusebio/tese/insaflu_snakemake/reference/A_H1N1pdm09_A_Michigan_45_2015.7.codonTable : Bacterial_and_Plant_Plastid
 home/reusebio/tese/insaflu_snakemake/reference/A_H1N1pdm09_A_Michigan_45_2015.8.codonTable : Bacterial_and_Plant_Plastid
+A_H3N2_A_Texas_50_2012.chromosome : [ ' 1 ' ,   ' 2 ' ,   ' 3 ' ,   ' 4 ' ,   ' 5 ' ,   ' 6 ' ,   ' 7 ' ,   ' 8 ' ]
+A_H3N2_A_Texas_50_2012.genome : flu
+A_H3N2_A_Texas_50_2012.1.codonTable : Bacterial_and_Plant_Plastid
+A_H3N2_A_Texas_50_2012.2.codonTable : Bacterial_and_Plant_Plastid
+A_H3N2_A_Texas_50_2012.3.codonTable : Bacterial_and_Plant_Plastid
+A_H3N2_A_Texas_50_2012.4.codonTable : Bacterial_and_Plant_Plastid
+A_H3N2_A_Texas_50_2012.5.codonTable : Bacterial_and_Plant_Plastid
+A_H3N2_A_Texas_50_2012.6.codonTable : Bacterial_and_Plant_Plastid
+A_H3N2_A_Texas_50_2012.7.codonTable : Bacterial_and_Plant_Plastid
+A_H3N2_A_Texas_50_2012.8.codonTable : Bacterial_and_Plant_Plastid
