--- a/config_user/config_user_1.yaml
+++ b/config_user/config_user_1.yaml
@@ -1,5 +1,5 @@
 only_samples: False
-project_name: INSAFLU_testing
+project_name: 3_covid_samples
 locus: SARS_CoV_2
 fasta_reference: reference/SARS_CoV_2_COVID_19_Wuhan_Hu_1_MN908947.fasta 
 gb_reference: reference/SARS_CoV_2_COVID_19_Wuhan_Hu_1_MN908947.gbk 
