--- a/config/config_run.yaml
+++ b/config/config_run.yaml
@@ -1,132 +1,35 @@
-identification: MN908947
-locus: SARS_CoV_2
-project: ont_samples_from_insa
+identification: ''
+locus: Flu
+project: flu_iVar
 proteins:
-- orf1ab
-- S
-- ORF3a
-- E
+- PB2
+- PB1
+- PA
+- HA
+- NP
+- NA
 - M
-- ORF6
-- ORF7a
-- ORF8
-- N
-- ORF10
+- NS
 sample_type:
-  Demo_Sample_069: medaka
-  Demo_Sample_070: medaka
-  Demo_Sample_072: medaka
-  Demo_Sample_073: medaka
-  Demo_Sample_075: medaka
-  Demo_Sample_076: medaka
-  Demo_Sample_077: medaka
-  Demo_Sample_078: medaka
-  Demo_Sample_080: medaka
-  Demo_Sample_081: medaka
-  Demo_Sample_082: medaka
-  Demo_Sample_083: medaka
-  Demo_Sample_085: medaka
-  Demo_Sample_087: medaka
-  Demo_Sample_089: medaka
-  Demo_Sample_091: medaka
-  Demo_Sample_093: medaka
-  Demo_Sample_094: medaka
-  Demo_Sample_096: medaka
-  Demo_Sample_100: medaka
-  Demo_Sample_101: medaka
-  Demo_Sample_102: medaka
-  Demo_Sample_103: medaka
+  influenza_01: iVar
+  influenza_02: iVar
+  influenza_03: iVar
+  influenza_04: iVar
 samples:
-  Demo_Sample_069:
-    fastq1: Demo_Sample_069
-    fastq2: null
-    tech: ont
-  Demo_Sample_070:
-    fastq1: Demo_Sample_070
-    fastq2: null
-    tech: ont
-  Demo_Sample_072:
-    fastq1: Demo_Sample_072
-    fastq2: null
-    tech: ont
-  Demo_Sample_073:
-    fastq1: Demo_Sample_073
-    fastq2: null
-    tech: ont
-  Demo_Sample_075:
-    fastq1: Demo_Sample_075
-    fastq2: null
-    tech: ont
-  Demo_Sample_076:
-    fastq1: Demo_Sample_076
-    fastq2: null
-    tech: ont
-  Demo_Sample_077:
-    fastq1: Demo_Sample_077
-    fastq2: null
-    tech: ont
-  Demo_Sample_078:
-    fastq1: Demo_Sample_078
-    fastq2: null
-    tech: ont
-  Demo_Sample_080:
-    fastq1: Demo_Sample_080
-    fastq2: null
-    tech: ont
-  Demo_Sample_081:
-    fastq1: Demo_Sample_081
-    fastq2: null
-    tech: ont
-  Demo_Sample_082:
-    fastq1: Demo_Sample_082
-    fastq2: null
-    tech: ont
-  Demo_Sample_083:
-    fastq1: Demo_Sample_083
-    fastq2: null
-    tech: ont
-  Demo_Sample_085:
-    fastq1: Demo_Sample_085
-    fastq2: null
-    tech: ont
-  Demo_Sample_087:
-    fastq1: Demo_Sample_087
-    fastq2: null
-    tech: ont
-  Demo_Sample_089:
-    fastq1: Demo_Sample_089
-    fastq2: null
-    tech: ont
-  Demo_Sample_091:
-    fastq1: Demo_Sample_091
-    fastq2: null
-    tech: ont
-  Demo_Sample_093:
-    fastq1: Demo_Sample_093
-    fastq2: null
-    tech: ont
-  Demo_Sample_094:
-    fastq1: Demo_Sample_094
-    fastq2: null
-    tech: ont
-  Demo_Sample_096:
-    fastq1: Demo_Sample_096
-    fastq2: null
-    tech: ont
-  Demo_Sample_100:
-    fastq1: Demo_Sample_100
-    fastq2: null
-    tech: ont
-  Demo_Sample_101:
-    fastq1: Demo_Sample_101
-    fastq2: null
-    tech: ont
-  Demo_Sample_102:
-    fastq1: Demo_Sample_102
-    fastq2: null
-    tech: ont
-  Demo_Sample_103:
-    fastq1: Demo_Sample_103
-    fastq2: null
-    tech: ont
-version: '3'
+  influenza_01:
+    fastq1: influenza_01_R1_001
+    fastq2: influenza_01_R2_001
+    tech: illumina
+  influenza_02:
+    fastq1: influenza_02_R1_001
+    fastq2: influenza_02_R2_001
+    tech: illumina
+  influenza_03:
+    fastq1: influenza_03_R1_001
+    fastq2: influenza_03_R2_001
+    tech: illumina
+  influenza_04:
+    fastq1: influenza_04_R1_001
+    fastq2: influenza_04_R2_001
+    tech: illumina
+version: ''
