--- a/config_user/config_user.yaml
+++ b/config_user/config_user.yaml
@@ -1,5 +1,5 @@
 only_samples: False
-project_name: ont_samples_from_insa
-locus: SARS_CoV_2
-fasta_reference: reference/SARS_CoV_2_COVID_19_Wuhan_Hu_1_MN908947.fasta 
-gb_reference: reference/SARS_CoV_2_COVID_19_Wuhan_Hu_1_MN908947.gbk 
+project_name: flu_iVar
+locus: Flu
+fasta_reference: reference/A_H3N2_A_Texas_50_2012.fasta 
+gb_reference: reference/A_H3N2_A_Texas_50_2012.gbk 
