--- a/config_user/parameters.yaml
+++ b/config_user/parameters.yaml
@@ -37,7 +37,7 @@ msa_masker: 9
 
 Medaka_model: r941_min_high_g360 #(default: r941_min_high_g360) (see: https://nanoporetech.github.io/medaka/)
 
-mincov_medaka: 29 #(default: 30)
+mincov_medaka: 29 #(default: 30) #msa_masker medaka
 
 Min_prop_for_variant_evidence: 0.8 #(default: 0.8).
 
