--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,6 @@
     "python.linting.pylintEnabled": true,
     "python.linting.enabled": true,
     "python.analysis.typeCheckingMode": "basic",
-    "python.formatting.blackPath": "black"
+    "python.formatting.blackPath": "black",
+    "python.languageServer": "Pylance"
 }
