--- a/config/config_run.yaml
+++ b/config/config_run.yaml
@@ -13,20 +13,120 @@ proteins:
 - N
 - ORF10
 sample_type:
-  ERR974981: medaka
-  SRR10885405: iVar
-  SRR10885406: iVar
+  Demo_Sample_069: medaka
+  Demo_Sample_070: medaka
+  Demo_Sample_072: medaka
+  Demo_Sample_073: medaka
+  Demo_Sample_075: medaka
+  Demo_Sample_076: medaka
+  Demo_Sample_077: medaka
+  Demo_Sample_078: medaka
+  Demo_Sample_080: medaka
+  Demo_Sample_081: medaka
+  Demo_Sample_082: medaka
+  Demo_Sample_083: medaka
+  Demo_Sample_085: medaka
+  Demo_Sample_087: medaka
+  Demo_Sample_089: medaka
+  Demo_Sample_091: medaka
+  Demo_Sample_093: medaka
+  Demo_Sample_094: medaka
+  Demo_Sample_096: medaka
+  Demo_Sample_100: medaka
+  Demo_Sample_101: medaka
+  Demo_Sample_102: medaka
+  Demo_Sample_103: medaka
 samples:
-  ERR974981:
-    fastq1: ERR974981
+  Demo_Sample_069:
+    fastq1: Demo_Sample_069
     fastq2: null
     tech: ont
-  SRR10885405:
-    fastq1: SRR10885405_1
-    fastq2: SRR10885405_2
-    tech: illumina
-  SRR10885406:
-    fastq1: SRR10885406_1
-    fastq2: SRR10885406_2
-    tech: illumina
+  Demo_Sample_070:
+    fastq1: Demo_Sample_070
+    fastq2: null
+    tech: ont
+  Demo_Sample_072:
+    fastq1: Demo_Sample_072
+    fastq2: null
+    tech: ont
+  Demo_Sample_073:
+    fastq1: Demo_Sample_073
+    fastq2: null
+    tech: ont
+  Demo_Sample_075:
+    fastq1: Demo_Sample_075
+    fastq2: null
+    tech: ont
+  Demo_Sample_076:
+    fastq1: Demo_Sample_076
+    fastq2: null
+    tech: ont
+  Demo_Sample_077:
+    fastq1: Demo_Sample_077
+    fastq2: null
+    tech: ont
+  Demo_Sample_078:
+    fastq1: Demo_Sample_078
+    fastq2: null
+    tech: ont
+  Demo_Sample_080:
+    fastq1: Demo_Sample_080
+    fastq2: null
+    tech: ont
+  Demo_Sample_081:
+    fastq1: Demo_Sample_081
+    fastq2: null
+    tech: ont
+  Demo_Sample_082:
+    fastq1: Demo_Sample_082
+    fastq2: null
+    tech: ont
+  Demo_Sample_083:
+    fastq1: Demo_Sample_083
+    fastq2: null
+    tech: ont
+  Demo_Sample_085:
+    fastq1: Demo_Sample_085
+    fastq2: null
+    tech: ont
+  Demo_Sample_087:
+    fastq1: Demo_Sample_087
+    fastq2: null
+    tech: ont
+  Demo_Sample_089:
+    fastq1: Demo_Sample_089
+    fastq2: null
+    tech: ont
+  Demo_Sample_091:
+    fastq1: Demo_Sample_091
+    fastq2: null
+    tech: ont
+  Demo_Sample_093:
+    fastq1: Demo_Sample_093
+    fastq2: null
+    tech: ont
+  Demo_Sample_094:
+    fastq1: Demo_Sample_094
+    fastq2: null
+    tech: ont
+  Demo_Sample_096:
+    fastq1: Demo_Sample_096
+    fastq2: null
+    tech: ont
+  Demo_Sample_100:
+    fastq1: Demo_Sample_100
+    fastq2: null
+    tech: ont
+  Demo_Sample_101:
+    fastq1: Demo_Sample_101
+    fastq2: null
+    tech: ont
+  Demo_Sample_102:
+    fastq1: Demo_Sample_102
+    fastq2: null
+    tech: ont
+  Demo_Sample_103:
+    fastq1: Demo_Sample_103
+    fastq2: null
+    tech: ont
 version: '3'
