--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
-    "python.linting.pylintEnabled": true,
+    // "python.linting.pylintEnabled": true,
     "python.linting.enabled": true,
     "python.analysis.typeCheckingMode": "basic",
     "python.formatting.blackPath": "black",
