[fix] monkey pox compatible

--- a/config/config_run.yaml
+++ b/config/config_run.yaml
@@ -1,43 +1,218 @@
-identification: MN908947
+identification: ON563414
 locus:
-- SARS_CoV_2
-project: test_ont_covid
+- ON563414
+project: test_illumina_se_mpx
 proteins:
-- orf1ab
-- S
-- ORF3a
-- E
-- M
-- ORF6
-- ORF7a
-- ORF8
-- N
-- ORF10
+- MPXV-USA_2022_MA001-001
+- MPXV-USA_2022_MA001-002
+- MPXV-USA_2022_MA001-003
+- MPXV-USA_2022_MA001-004
+- MPXV-USA_2022_MA001-005
+- MPXV-USA_2022_MA001-006
+- MPXV-USA_2022_MA001-007
+- MPXV-USA_2022_MA001-008
+- MPXV-USA_2022_MA001-009
+- MPXV-USA_2022_MA001-010
+- MPXV-USA_2022_MA001-011
+- MPXV-USA_2022_MA001-012
+- MPXV-USA_2022_MA001-013
+- MPXV-USA_2022_MA001-014
+- MPXV-USA_2022_MA001-015
+- MPXV-USA_2022_MA001-016
+- MPXV-USA_2022_MA001-017
+- MPXV-USA_2022_MA001-018
+- MPXV-USA_2022_MA001-019
+- MPXV-USA_2022_MA001-020
+- MPXV-USA_2022_MA001-021
+- MPXV-USA_2022_MA001-022
+- MPXV-USA_2022_MA001-023
+- MPXV-USA_2022_MA001-024
+- MPXV-USA_2022_MA001-025
+- MPXV-USA_2022_MA001-026
+- MPXV-USA_2022_MA001-027
+- MPXV-USA_2022_MA001-028
+- MPXV-USA_2022_MA001-029
+- MPXV-USA_2022_MA001-030
+- MPXV-USA_2022_MA001-031
+- MPXV-USA_2022_MA001-032
+- MPXV-USA_2022_MA001-033
+- MPXV-USA_2022_MA001-034
+- MPXV-USA_2022_MA001-035
+- MPXV-USA_2022_MA001-036
+- MPXV-USA_2022_MA001-037
+- MPXV-USA_2022_MA001-038
+- MPXV-USA_2022_MA001-039
+- MPXV-USA_2022_MA001-040
+- MPXV-USA_2022_MA001-041
+- MPXV-USA_2022_MA001-042
+- MPXV-USA_2022_MA001-043
+- MPXV-USA_2022_MA001-044
+- MPXV-USA_2022_MA001-045
+- MPXV-USA_2022_MA001-046
+- MPXV-USA_2022_MA001-047
+- MPXV-USA_2022_MA001-048
+- MPXV-USA_2022_MA001-049
+- MPXV-USA_2022_MA001-050
+- MPXV-USA_2022_MA001-051
+- MPXV-USA_2022_MA001-052
+- MPXV-USA_2022_MA001-053
+- MPXV-USA_2022_MA001-054
+- MPXV-USA_2022_MA001-055
+- MPXV-USA_2022_MA001-056
+- MPXV-USA_2022_MA001-057
+- MPXV-USA_2022_MA001-058
+- MPXV-USA_2022_MA001-059
+- MPXV-USA_2022_MA001-060
+- MPXV-USA_2022_MA001-061
+- MPXV-USA_2022_MA001-062
+- MPXV-USA_2022_MA001-063
+- MPXV-USA_2022_MA001-064
+- MPXV-USA_2022_MA001-065
+- MPXV-USA_2022_MA001-066
+- MPXV-USA_2022_MA001-067
+- MPXV-USA_2022_MA001-068
+- MPXV-USA_2022_MA001-069
+- MPXV-USA_2022_MA001-070
+- MPXV-USA_2022_MA001-071
+- MPXV-USA_2022_MA001-072
+- MPXV-USA_2022_MA001-073
+- MPXV-USA_2022_MA001-074
+- MPXV-USA_2022_MA001-075
+- MPXV-USA_2022_MA001-076
+- MPXV-USA_2022_MA001-077
+- MPXV-USA_2022_MA001-078
+- MPXV-USA_2022_MA001-079
+- MPXV-USA_2022_MA001-080
+- MPXV-USA_2022_MA001-081
+- MPXV-USA_2022_MA001-082
+- MPXV-USA_2022_MA001-083
+- MPXV-USA_2022_MA001-084
+- MPXV-USA_2022_MA001-085
+- MPXV-USA_2022_MA001-086
+- MPXV-USA_2022_MA001-087
+- MPXV-USA_2022_MA001-088
+- MPXV-USA_2022_MA001-089
+- MPXV-USA_2022_MA001-090
+- MPXV-USA_2022_MA001-091
+- MPXV-USA_2022_MA001-092
+- MPXV-USA_2022_MA001-093
+- MPXV-USA_2022_MA001-094
+- MPXV-USA_2022_MA001-095
+- MPXV-USA_2022_MA001-096
+- MPXV-USA_2022_MA001-097
+- MPXV-USA_2022_MA001-098
+- MPXV-USA_2022_MA001-099
+- MPXV-USA_2022_MA001-100
+- MPXV-USA_2022_MA001-101
+- MPXV-USA_2022_MA001-102
+- MPXV-USA_2022_MA001-103
+- MPXV-USA_2022_MA001-104
+- MPXV-USA_2022_MA001-105
+- MPXV-USA_2022_MA001-106
+- MPXV-USA_2022_MA001-107
+- MPXV-USA_2022_MA001-108
+- MPXV-USA_2022_MA001-109
+- MPXV-USA_2022_MA001-110
+- MPXV-USA_2022_MA001-111
+- MPXV-USA_2022_MA001-112
+- MPXV-USA_2022_MA001-113
+- MPXV-USA_2022_MA001-114
+- MPXV-USA_2022_MA001-115
+- MPXV-USA_2022_MA001-116
+- MPXV-USA_2022_MA001-117
+- MPXV-USA_2022_MA001-118
+- MPXV-USA_2022_MA001-119
+- MPXV-USA_2022_MA001-120
+- MPXV-USA_2022_MA001-121
+- MPXV-USA_2022_MA001-122
+- MPXV-USA_2022_MA001-123
+- MPXV-USA_2022_MA001-124
+- MPXV-USA_2022_MA001-125
+- MPXV-USA_2022_MA001-126
+- MPXV-USA_2022_MA001-127
+- MPXV-USA_2022_MA001-128
+- MPXV-USA_2022_MA001-129
+- MPXV-USA_2022_MA001-130
+- MPXV-USA_2022_MA001-131
+- MPXV-USA_2022_MA001-132
+- MPXV-USA_2022_MA001-133
+- MPXV-USA_2022_MA001-134
+- MPXV-USA_2022_MA001-135
+- MPXV-USA_2022_MA001-136
+- MPXV-USA_2022_MA001-137
+- MPXV-USA_2022_MA001-138
+- MPXV-USA_2022_MA001-139
+- MPXV-USA_2022_MA001-140
+- MPXV-USA_2022_MA001-141
+- MPXV-USA_2022_MA001-142
+- MPXV-USA_2022_MA001-143
+- MPXV-USA_2022_MA001-144
+- MPXV-USA_2022_MA001-145
+- MPXV-USA_2022_MA001-146
+- MPXV-USA_2022_MA001-147
+- MPXV-USA_2022_MA001-148
+- MPXV-USA_2022_MA001-149
+- MPXV-USA_2022_MA001-150
+- MPXV-USA_2022_MA001-151
+- MPXV-USA_2022_MA001-152
+- MPXV-USA_2022_MA001-153
+- MPXV-USA_2022_MA001-154
+- MPXV-USA_2022_MA001-155
+- MPXV-USA_2022_MA001-156
+- MPXV-USA_2022_MA001-157
+- MPXV-USA_2022_MA001-158
+- MPXV-USA_2022_MA001-159
+- MPXV-USA_2022_MA001-160
+- MPXV-USA_2022_MA001-161
+- MPXV-USA_2022_MA001-162
+- MPXV-USA_2022_MA001-163
+- MPXV-USA_2022_MA001-164
+- MPXV-USA_2022_MA001-165
+- MPXV-USA_2022_MA001-166
+- MPXV-USA_2022_MA001-167
+- MPXV-USA_2022_MA001-168
+- MPXV-USA_2022_MA001-169
+- MPXV-USA_2022_MA001-170
+- MPXV-USA_2022_MA001-171
+- MPXV-USA_2022_MA001-172
+- MPXV-USA_2022_MA001-173
+- MPXV-USA_2022_MA001-174
+- MPXV-USA_2022_MA001-175
+- MPXV-USA_2022_MA001-176
+- MPXV-USA_2022_MA001-177
+- MPXV-USA_2022_MA001-178
+- MPXV-USA_2022_MA001-179
+- MPXV-USA_2022_MA001-180
+- MPXV-USA_2022_MA001-181
+- MPXV-USA_2022_MA001-182
+- MPXV-USA_2022_MA001-183
+- MPXV-USA_2022_MA001-184
+- MPXV-USA_2022_MA001-185
+- MPXV-USA_2022_MA001-186
+- MPXV-USA_2022_MA001-187
+- MPXV-USA_2022_MA001-188
+- MPXV-USA_2022_MA001-189
+- MPXV-USA_2022_MA001-190
 sample_type:
-  Demo_Sample_069: medaka
-  Demo_Sample_070: medaka
-  Demo_Sample_101: medaka
-  Demo_Sample_102: medaka
-  Demo_Sample_103: medaka
+  SRR22321682: snippy
+  SRR22321683: snippy
+  SRR22321685: snippy
+  SRR22321720: snippy
 samples:
-  Demo_Sample_069:
-    fastq1: Demo_Sample_069
+  SRR22321682:
+    fastq1: SRR22321682
     fastq2: null
-    tech: ont
-  Demo_Sample_070:
-    fastq1: Demo_Sample_070
+    tech: illumina
+  SRR22321683:
+    fastq1: SRR22321683
     fastq2: null
-    tech: ont
-  Demo_Sample_101:
-    fastq1: Demo_Sample_101
+    tech: illumina
+  SRR22321685:
+    fastq1: SRR22321685
     fastq2: null
-    tech: ont
-  Demo_Sample_102:
-    fastq1: Demo_Sample_102
+    tech: illumina
+  SRR22321720:
+    fastq1: SRR22321720
     fastq2: null
-    tech: ont
-  Demo_Sample_103:
-    fastq1: Demo_Sample_103
-    fastq2: null
-    tech: ont
+    tech: illumina
 version: '3'
