--- a/config/snpeff.config
+++ b/config/snpeff.config
@@ -67,3 +67,6 @@ A_H3N2_A_Texas_50_2012.5.codonTable : Bacterial_and_Plant_Plastid
 A_H3N2_A_Texas_50_2012.6.codonTable : Bacterial_and_Plant_Plastid
 A_H3N2_A_Texas_50_2012.7.codonTable : Bacterial_and_Plant_Plastid
 A_H3N2_A_Texas_50_2012.8.codonTable : Bacterial_and_Plant_Plastid
+
+monkeypox_MPXV_USA_2022_MA001_ON563414.genome: monkeypox_MPXV_USA_2022_MA001_ON563414
+monkeypox_MPXV_USA_2022_MA001_ON563414.ON563414.3.codonTable : Bacterial_and_Plant_Plastid
