--- a/config_user/1_test_i_pe_flu.yaml
+++ b/config_user/1_test_i_pe_flu.yaml
@@ -1,4 +1,4 @@
-only_samples: False
-project_name: test_illumina_pe_covid
-fasta_reference: reference/SARS_CoV_2_COVID_19_Wuhan_Hu_1_MN908947.fasta 
-gb_reference: reference/SARS_CoV_2_COVID_19_Wuhan_Hu_1_MN908947.gbk 
+only_samples: True
+project_name: test_illumina_pe_flu
+fasta_reference: reference/B_Vic_B_Brisbane_60_2008.fasta
+gb_reference: reference/B_Vic_B_Brisbane_60_2008.gbk 
