--- a/config_user/2_test_i_se_mp.yaml
+++ b/config_user/2_test_i_se_mp.yaml
@@ -1,4 +1,4 @@
 only_samples: False
-project_name: test_illumina_se_covid
-fasta_reference: reference/SARS_CoV_2_COVID_19_Wuhan_Hu_1_MN908947.fasta 
-gb_reference: reference/SARS_CoV_2_COVID_19_Wuhan_Hu_1_MN908947.gbk 
+project_name: test_illumina_se_mpx
+fasta_reference: reference/monkeypox_MPXV_USA_2022_MA001_ON563414.fasta
+gb_reference: reference/monkeypox_MPXV_USA_2022_MA001_ON563414.gbk
