--- a/config/snpeff.config
+++ b/config/snpeff.config
@@ -70,3 +70,13 @@ A_H3N2_A_Texas_50_2012.8.codonTable : Bacterial_and_Plant_Plastid
 
 monkeypox_MPXV_USA_2022_MA001_ON563414.genome: monkeypox_MPXV_USA_2022_MA001_ON563414
 monkeypox_MPXV_USA_2022_MA001_ON563414.ON563414.3.codonTable : Bacterial_and_Plant_Plastid
+A_H1N1pdm09_A_Michigan_45_2015.chromosome : [ ' 1 ' ,   ' 2 ' ,   ' 3 ' ,   ' 4 ' ,   ' 5 ' ,   ' 6 ' ,   ' 7 ' ,   ' 8 ' ]
+A_H1N1pdm09_A_Michigan_45_2015.genome : flu
+A_H1N1pdm09_A_Michigan_45_2015.1.codonTable : Bacterial_and_Plant_Plastid
+A_H1N1pdm09_A_Michigan_45_2015.2.codonTable : Bacterial_and_Plant_Plastid
+A_H1N1pdm09_A_Michigan_45_2015.3.codonTable : Bacterial_and_Plant_Plastid
+A_H1N1pdm09_A_Michigan_45_2015.4.codonTable : Bacterial_and_Plant_Plastid
+A_H1N1pdm09_A_Michigan_45_2015.5.codonTable : Bacterial_and_Plant_Plastid
+A_H1N1pdm09_A_Michigan_45_2015.6.codonTable : Bacterial_and_Plant_Plastid
+A_H1N1pdm09_A_Michigan_45_2015.7.codonTable : Bacterial_and_Plant_Plastid
+A_H1N1pdm09_A_Michigan_45_2015.8.codonTable : Bacterial_and_Plant_Plastid
