try to simplify

--- a/config/snpeff.config
+++ b/config/snpeff.config
@@ -80,3 +80,9 @@ A_H1N1pdm09_A_Michigan_45_2015.5.codonTable : Bacterial_and_Plant_Plastid
 A_H1N1pdm09_A_Michigan_45_2015.6.codonTable : Bacterial_and_Plant_Plastid
 A_H1N1pdm09_A_Michigan_45_2015.7.codonTable : Bacterial_and_Plant_Plastid
 A_H1N1pdm09_A_Michigan_45_2015.8.codonTable : Bacterial_and_Plant_Plastid
+
+monkeypox_MT903344_MPXV_UK_P2_wo_NN.genome: monkeypox_MT903344_MPXV_UK_P2_wo_NN
+monkeypox_MT903344_MPXV_UK_P2_wo_NN.Monkeypox.1.codonTable : Bacterial_and_Plant_Plastid
+
+monkeypox_MT903344_MPXV_UK_P2_wo_NN.genome: monkeypox_MT903344_MPXV_UK_P2_wo_NN
+monkeypox_MT903344_MPXV_UK_P2_wo_NN.MT903344.1.codonTable : Bacterial_and_Plant_Plastid
