--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,5 +5,6 @@
     "python.formatting.blackPath": "black",
     "python.languageServer": "Pylance",
     "mypy.dmypyExecutable": "dmypy",
-    "mypy.runUsingActiveInterpreter": false
+    "mypy.runUsingActiveInterpreter": false,
+    "editor.formatOnSave": true
 }
