--- a/config/config_run.yaml
+++ b/config/config_run.yaml
@@ -1,7 +1,7 @@
 identification: MN908947
 locus:
 - SARS_CoV_2
-project: test_illumina_pe_covid
+project: test_covid_copy
 proteins:
 - orf1ab
 - S
@@ -14,30 +14,400 @@ proteins:
 - N
 - ORF10
 sample_type:
-  Portugal_PT43103_2022: snippy
-  Portugal_PT43123_2022: snippy
-  Portugal_PT43260_2022: snippy
-  Portugal_PT43261_2022: snippy
-  Portugal_PT43262_2022: snippy
+  demo_SARSCoV2_001: snippy
+  demo_SARSCoV2_002: snippy
+  demo_SARSCoV2_003: snippy
+  demo_SARSCoV2_004: snippy
+  demo_SARSCoV2_005: snippy
+  demo_SARSCoV2_012: snippy
+  demo_SARSCoV2_013: snippy
+  demo_SARSCoV2_014: snippy
+  demo_SARSCoV2_016: snippy
+  demo_SARSCoV2_017: snippy
+  demo_SARSCoV2_018: snippy
+  demo_SARSCoV2_019: snippy
+  demo_SARSCoV2_020: snippy
+  demo_SARSCoV2_025: snippy
+  demo_SARSCoV2_026: snippy
+  demo_SARSCoV2_027: snippy
+  demo_SARSCoV2_028: snippy
+  demo_SARSCoV2_029: snippy
+  demo_SARSCoV2_030: snippy
+  demo_SARSCoV2_035: snippy
+  demo_SARSCoV2_036: snippy
+  demo_SARSCoV2_037: snippy
+  demo_SARSCoV2_038: snippy
+  demo_SARSCoV2_039: snippy
+  demo_SARSCoV2_040: snippy
+  demo_SARSCoV2_041: snippy
+  demo_SARSCoV2_048: snippy
+  demo_SARSCoV2_049: snippy
+  demo_SARSCoV2_050: snippy
+  demo_SARSCoV2_051: snippy
+  demo_SARSCoV2_052: snippy
+  demo_SARSCoV2_053: snippy
+  demo_SARSCoV2_054: snippy
+  demo_SARSCoV2_055: snippy
+  demo_SARSCoV2_060: snippy
+  demo_SARSCoV2_061: snippy
+  demo_SARSCoV2_062: snippy
+  demo_SARSCoV2_063: snippy
+  demo_SARSCoV2_064: snippy
+  demo_SARSCoV2_065: snippy
+  demo_SARSCoV2_066: snippy
+  demo_SARSCoV2_067: snippy
+  demo_SARSCoV2_069: medaka
+  demo_SARSCoV2_070: medaka
+  demo_SARSCoV2_072: medaka
+  demo_SARSCoV2_073: medaka
+  demo_SARSCoV2_075: medaka
+  demo_SARSCoV2_076: medaka
+  demo_SARSCoV2_077: medaka
+  demo_SARSCoV2_078: medaka
+  demo_SARSCoV2_080: medaka
+  demo_SARSCoV2_081: medaka
+  demo_SARSCoV2_082: medaka
+  demo_SARSCoV2_083: medaka
+  demo_SARSCoV2_085: medaka
+  demo_SARSCoV2_087: medaka
+  demo_SARSCoV2_089: medaka
+  demo_SARSCoV2_091: medaka
+  demo_SARSCoV2_093: medaka
+  demo_SARSCoV2_094: medaka
+  demo_SARSCoV2_096: medaka
+  demo_SARSCoV2_100: medaka
+  demo_SARSCoV2_101: medaka
+  demo_SARSCoV2_102: medaka
+  demo_SARSCoV2_103: medaka
+  demo_SARSCoV2_104: snippy
+  demo_SARSCoV2_105: snippy
+  demo_SARSCoV2_106: snippy
+  demo_SARSCoV2_107: snippy
+  demo_SARSCoV2_108: snippy
+  demo_SARSCoV2_109: snippy
+  demo_SARSCoV2_110: snippy
+  demo_SARSCoV2_111: snippy
+  demo_SARSCoV2_112: snippy
+  demo_SARSCoV2_113: snippy
+  demo_SARSCoV2_114: snippy
+  demo_SARSCoV2_115: snippy
+  demo_SARSCoV2_116: snippy
+  demo_SARSCoV2_117: snippy
 samples:
-  Portugal_PT43103_2022:
-    fastq1: Portugal-PT43103-2022_R1_001
-    fastq2: Portugal-PT43103-2022_R2_001
+  demo_SARSCoV2_001:
+    fastq1: Demo_Sample_001_R1_001
+    fastq2: Demo_Sample_001_R2_001
     tech: illumina
-  Portugal_PT43123_2022:
-    fastq1: Portugal-PT43123-2022_R1_001
-    fastq2: Portugal-PT43123-2022_R2_001
+  demo_SARSCoV2_002:
+    fastq1: Demo_Sample_002_R1_001
+    fastq2: Demo_Sample_002_R2_001
     tech: illumina
-  Portugal_PT43260_2022:
-    fastq1: Portugal-PT43260-2022_R1_001
-    fastq2: Portugal-PT43260-2022_R2_001
+  demo_SARSCoV2_003:
+    fastq1: Demo_Sample_003_R1_001
+    fastq2: Demo_Sample_003_R2_001
     tech: illumina
-  Portugal_PT43261_2022:
-    fastq1: Portugal-PT43261-2022_R1_001
-    fastq2: Portugal-PT43261-2022_R2_001
+  demo_SARSCoV2_004:
+    fastq1: Demo_Sample_004_R1_001
+    fastq2: Demo_Sample_004_R2_001
     tech: illumina
-  Portugal_PT43262_2022:
-    fastq1: Portugal-PT43262-2022_R1_001
-    fastq2: Portugal-PT43262-2022_R2_001
+  demo_SARSCoV2_005:
+    fastq1: Demo_Sample_005_R1_001
+    fastq2: Demo_Sample_005_R2_001
+    tech: illumina
+  demo_SARSCoV2_012:
+    fastq1: Demo_Sample_012_R1_001
+    fastq2: Demo_Sample_012_R2_001
+    tech: illumina
+  demo_SARSCoV2_013:
+    fastq1: Demo_Sample_013_R1_001
+    fastq2: Demo_Sample_013_R2_001
+    tech: illumina
+  demo_SARSCoV2_014:
+    fastq1: Demo_Sample_014_R1_001
+    fastq2: Demo_Sample_014_R2_001
+    tech: illumina
+  demo_SARSCoV2_016:
+    fastq1: Demo_Sample_016_R1_001
+    fastq2: Demo_Sample_016_R2_001
+    tech: illumina
+  demo_SARSCoV2_017:
+    fastq1: Demo_Sample_017_R1_001
+    fastq2: Demo_Sample_017_R2_001
+    tech: illumina
+  demo_SARSCoV2_018:
+    fastq1: Demo_Sample_018_R1_001
+    fastq2: Demo_Sample_018_R2_001
+    tech: illumina
+  demo_SARSCoV2_019:
+    fastq1: Demo_Sample_019_R1_001
+    fastq2: Demo_Sample_019_R2_001
+    tech: illumina
+  demo_SARSCoV2_020:
+    fastq1: Demo_Sample_020_R1_001
+    fastq2: Demo_Sample_020_R2_001
+    tech: illumina
+  demo_SARSCoV2_025:
+    fastq1: Demo_Sample_025_R1_001
+    fastq2: Demo_Sample_025_R2_001
+    tech: illumina
+  demo_SARSCoV2_026:
+    fastq1: Demo_Sample_026_R1_001
+    fastq2: Demo_Sample_026_R2_001
+    tech: illumina
+  demo_SARSCoV2_027:
+    fastq1: Demo_Sample_027_R1_001
+    fastq2: Demo_Sample_027_R2_001
+    tech: illumina
+  demo_SARSCoV2_028:
+    fastq1: Demo_Sample_028_R1_001
+    fastq2: Demo_Sample_028_R2_001
+    tech: illumina
+  demo_SARSCoV2_029:
+    fastq1: Demo_Sample_029_R1_001
+    fastq2: Demo_Sample_029_R2_001
+    tech: illumina
+  demo_SARSCoV2_030:
+    fastq1: Demo_Sample_030_R1_001
+    fastq2: Demo_Sample_030_R2_001
+    tech: illumina
+  demo_SARSCoV2_035:
+    fastq1: Demo_Sample_035_R1_001
+    fastq2: Demo_Sample_035_R2_001
+    tech: illumina
+  demo_SARSCoV2_036:
+    fastq1: Demo_Sample_036_R1_001
+    fastq2: Demo_Sample_036_R2_001
+    tech: illumina
+  demo_SARSCoV2_037:
+    fastq1: Demo_Sample_037_R1_001
+    fastq2: Demo_Sample_037_R2_001
+    tech: illumina
+  demo_SARSCoV2_038:
+    fastq1: Demo_Sample_038_R1_001
+    fastq2: Demo_Sample_038_R2_001
+    tech: illumina
+  demo_SARSCoV2_039:
+    fastq1: Demo_Sample_039_R1_001
+    fastq2: Demo_Sample_039_R2_001
+    tech: illumina
+  demo_SARSCoV2_040:
+    fastq1: Demo_Sample_040_R1_001
+    fastq2: Demo_Sample_040_R2_001
+    tech: illumina
+  demo_SARSCoV2_041:
+    fastq1: Demo_Sample_041_R1_001
+    fastq2: Demo_Sample_041_R2_001
+    tech: illumina
+  demo_SARSCoV2_048:
+    fastq1: Demo_Sample_048_R1_001
+    fastq2: Demo_Sample_048_R2_001
+    tech: illumina
+  demo_SARSCoV2_049:
+    fastq1: Demo_Sample_049_R1_001
+    fastq2: Demo_Sample_049_R2_001
+    tech: illumina
+  demo_SARSCoV2_050:
+    fastq1: Demo_Sample_050_R1_001
+    fastq2: Demo_Sample_050_R2_001
+    tech: illumina
+  demo_SARSCoV2_051:
+    fastq1: Demo_Sample_051_R1_001
+    fastq2: Demo_Sample_051_R2_001
+    tech: illumina
+  demo_SARSCoV2_052:
+    fastq1: Demo_Sample_052_R1_001
+    fastq2: Demo_Sample_052_R2_001
+    tech: illumina
+  demo_SARSCoV2_053:
+    fastq1: Demo_Sample_053_R1_001
+    fastq2: Demo_Sample_053_R2_001
+    tech: illumina
+  demo_SARSCoV2_054:
+    fastq1: Demo_Sample_054_R1_001
+    fastq2: Demo_Sample_054_R2_001
+    tech: illumina
+  demo_SARSCoV2_055:
+    fastq1: Demo_Sample_055_R1_001
+    fastq2: Demo_Sample_055_R2_001
+    tech: illumina
+  demo_SARSCoV2_060:
+    fastq1: Demo_Sample_060_R1_001
+    fastq2: Demo_Sample_060_R2_001
+    tech: illumina
+  demo_SARSCoV2_061:
+    fastq1: Demo_Sample_061_R1_001
+    fastq2: Demo_Sample_061_R2_001
+    tech: illumina
+  demo_SARSCoV2_062:
+    fastq1: Demo_Sample_062_R1_001
+    fastq2: Demo_Sample_062_R2_001
+    tech: illumina
+  demo_SARSCoV2_063:
+    fastq1: Demo_Sample_063_R1_001
+    fastq2: Demo_Sample_063_R2_001
+    tech: illumina
+  demo_SARSCoV2_064:
+    fastq1: Demo_Sample_064_R1_001
+    fastq2: Demo_Sample_064_R2_001
+    tech: illumina
+  demo_SARSCoV2_065:
+    fastq1: Demo_Sample_065_R1_001
+    fastq2: Demo_Sample_065_R2_001
+    tech: illumina
+  demo_SARSCoV2_066:
+    fastq1: Demo_Sample_066_R1_001
+    fastq2: Demo_Sample_066_R2_001
+    tech: illumina
+  demo_SARSCoV2_067:
+    fastq1: Demo_Sample_067_R1_001
+    fastq2: Demo_Sample_067_R2_001
+    tech: illumina
+  demo_SARSCoV2_069:
+    fastq1: Demo_Sample_069
+    fastq2: null
+    tech: ont
+  demo_SARSCoV2_070:
+    fastq1: Demo_Sample_070
+    fastq2: null
+    tech: ont
+  demo_SARSCoV2_072:
+    fastq1: Demo_Sample_072
+    fastq2: null
+    tech: ont
+  demo_SARSCoV2_073:
+    fastq1: Demo_Sample_073
+    fastq2: null
+    tech: ont
+  demo_SARSCoV2_075:
+    fastq1: Demo_Sample_075
+    fastq2: null
+    tech: ont
+  demo_SARSCoV2_076:
+    fastq1: Demo_Sample_076
+    fastq2: null
+    tech: ont
+  demo_SARSCoV2_077:
+    fastq1: Demo_Sample_077
+    fastq2: null
+    tech: ont
+  demo_SARSCoV2_078:
+    fastq1: Demo_Sample_078
+    fastq2: null
+    tech: ont
+  demo_SARSCoV2_080:
+    fastq1: Demo_Sample_080
+    fastq2: null
+    tech: ont
+  demo_SARSCoV2_081:
+    fastq1: Demo_Sample_081
+    fastq2: null
+    tech: ont
+  demo_SARSCoV2_082:
+    fastq1: Demo_Sample_082
+    fastq2: null
+    tech: ont
+  demo_SARSCoV2_083:
+    fastq1: Demo_Sample_083
+    fastq2: null
+    tech: ont
+  demo_SARSCoV2_085:
+    fastq1: Demo_Sample_085
+    fastq2: null
+    tech: ont
+  demo_SARSCoV2_087:
+    fastq1: Demo_Sample_087
+    fastq2: null
+    tech: ont
+  demo_SARSCoV2_089:
+    fastq1: Demo_Sample_089
+    fastq2: null
+    tech: ont
+  demo_SARSCoV2_091:
+    fastq1: Demo_Sample_091
+    fastq2: null
+    tech: ont
+  demo_SARSCoV2_093:
+    fastq1: Demo_Sample_093
+    fastq2: null
+    tech: ont
+  demo_SARSCoV2_094:
+    fastq1: Demo_Sample_094
+    fastq2: null
+    tech: ont
+  demo_SARSCoV2_096:
+    fastq1: Demo_Sample_096
+    fastq2: null
+    tech: ont
+  demo_SARSCoV2_100:
+    fastq1: Demo_Sample_100
+    fastq2: null
+    tech: ont
+  demo_SARSCoV2_101:
+    fastq1: Demo_Sample_101
+    fastq2: null
+    tech: ont
+  demo_SARSCoV2_102:
+    fastq1: Demo_Sample_102
+    fastq2: null
+    tech: ont
+  demo_SARSCoV2_103:
+    fastq1: Demo_Sample_103
+    fastq2: null
+    tech: ont
+  demo_SARSCoV2_104:
+    fastq1: Demo_Sample_104_R1_001
+    fastq2: Demo_Sample_104_R2_001
+    tech: illumina
+  demo_SARSCoV2_105:
+    fastq1: Demo_Sample_105_R1_001
+    fastq2: Demo_Sample_105_R2_001
+    tech: illumina
+  demo_SARSCoV2_106:
+    fastq1: Demo_Sample_106_R1_001
+    fastq2: Demo_Sample_106_R2_001
+    tech: illumina
+  demo_SARSCoV2_107:
+    fastq1: Demo_Sample_107_R1_001
+    fastq2: Demo_Sample_107_R2_001
+    tech: illumina
+  demo_SARSCoV2_108:
+    fastq1: Demo_Sample_108_R1_001
+    fastq2: Demo_Sample_108_R2_001
+    tech: illumina
+  demo_SARSCoV2_109:
+    fastq1: Demo_Sample_109_R1_001
+    fastq2: Demo_Sample_109_R2_001
+    tech: illumina
+  demo_SARSCoV2_110:
+    fastq1: Demo_Sample_110_R1_001
+    fastq2: Demo_Sample_110_R2_001
+    tech: illumina
+  demo_SARSCoV2_111:
+    fastq1: Demo_Sample_111_R1_001
+    fastq2: Demo_Sample_111_R2_001
+    tech: illumina
+  demo_SARSCoV2_112:
+    fastq1: Demo_Sample_112_R1_001
+    fastq2: Demo_Sample_112_R2_001
+    tech: illumina
+  demo_SARSCoV2_113:
+    fastq1: Demo_Sample_113_R1_001
+    fastq2: Demo_Sample_113_R2_001
+    tech: illumina
+  demo_SARSCoV2_114:
+    fastq1: Demo_Sample_114_R1_001
+    fastq2: Demo_Sample_114_R2_001
+    tech: illumina
+  demo_SARSCoV2_115:
+    fastq1: Demo_Sample_115_R1_001
+    fastq2: Demo_Sample_115_R2_001
+    tech: illumina
+  demo_SARSCoV2_116:
+    fastq1: Demo_Sample_116_R1_001
+    fastq2: Demo_Sample_116_R2_001
+    tech: illumina
+  demo_SARSCoV2_117:
+    fastq1: Demo_Sample_117_R1_001
+    fastq2: Demo_Sample_117_R2_001
     tech: illumina
 version: '3'
